--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/9. perf kvm.md
+++ b/Linux/Debug/debug/tools/perf/9. perf kvm.md
@@ -9,6 +9,8 @@
 - [4. 利用sshfs自动读取guest的kallsyms和modules文件](#4-利用sshfs自动读取guest的kallsyms和modules文件)
 - [5. 记录guest的性能事件](#5-记录guest的性能事件)
 - [6. 分析guest上的性能事件](#6-分析guest上的性能事件)
+- [perf kvm stat record/report使用](#perf-kvm-stat-recordreport使用)
+- [相关资料](#相关资料)
 
 <!-- /code_chunk_output -->
 
@@ -133,6 +135,42 @@ perf kvm --host --guest --guestmodules=guest-modules report -i perf.data.kvm --f
 将来perf kvm可能通过增加guest的PID的方式来分别指定每个guest的kallsyms和modules文件，那么，就可以正确解析每个guest的符号。
 
 通过上面的介绍，我们可以看到，利用perf kvm子工具，我们可以方便的在host中监测guest中的性能事件，这对于我们分析guest的性能是非常方便的。Perf kvm子工具还支持其它的perf的命令，比如：stat等。
+
+
+# perf kvm stat record/report 使用
+
+
+
+perf文档: 
+tools/perf/Documentation/
+
+
+1. host和vm跑benchamark, 确定具体benchmark的差异
+2. 可以参照 https://lwn.net/Articles/513317/
+
+第一步, record
+
+./perf kvm stat record --pid 39941
+或
+./perf stat record -e kvm:* --pid 39941
+
+第二步, report
+
+./perf kvm stat report
+或
+./perf kvm stat report --pid 39941
+
+或单独event
+./perf kvm stat report --event=vmexit
+
+./perf kvm stat report --event=mmio
+
+./perf kvm stat report --event=ioport
+
+./perf kvm stat report --event=vmexit --vcpu=0 --key=time
+
+
+# 相关资料
 
 https://lwn.net/Articles/513317/
 
