--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/9. perf kvm.md
+++ b/Linux/Debug/debug/tools/perf/9. perf kvm.md
@@ -11,6 +11,8 @@
 - [6. 分析guest上的性能事件](#6-分析guest上的性能事件)
 - [perf kvm stat record/report 使用](#perf-kvm-stat-recordreport-使用)
 - [相关资料](#相关资料)
+- [例子](#例子)
+  - [背景](#背景)
 
 <!-- /code_chunk_output -->
 
@@ -36,7 +38,11 @@ perf kvm [--host] [--guest] [--guestkallsyms=<path> --guestmodules=<path>
 perf kvm有几个变体:
 
 * `perf kvm [options] top <command>`: 用于实时生成并显示虚拟机操作系统的性能数据
-* `perf kvm record <command>`: 记录性能数据并保存到文件. 如果 `--host` 和 `--guest` 均在命令中使用，输出将被储存在 `perf.data.kvm` 中。如果只有 `--host` 被使用，文件将被命名为 `perf.data.host`。同样地，如果仅有 `--guest` 被使用，文件将被命名为 `perf.data.guest`。
+* `perf kvm record <command>`: 记录性能数据并保存到文件. 
+    * 默认情况下, `perf.data.guest`
+    * 如果 `--host` 和 `--guest` 均在命令中使用，输出将被储存在 `perf.data.kvm` 中。
+    * 如果只有 `--host` 被使用，文件将被命名为 `perf.data.host`。
+    * 同样地，如果仅有 `--guest` 被使用，文件将被命名为 `perf.data.guest`。
 * `perf kvm report`: 读取`perf kvm record`输出, 显示性能分析数据
 * `perf kvm diff`: 显示两个`perf kvm record`记录的数据的不同
 * `perf kvm buildid-list`:
@@ -178,3 +184,17 @@ https://lwn.net/Articles/513317/
 
 
 https://blog.csdn.net/x_i_y_u_e/article/details/48466031
+
+
+
+# 例子
+
+## 背景
+
+benchmark或业务性能较差
+
+1. 抓取正常情况下kvm性能数据
+
+```
+./perf kvm stat record -a -p 178264 sleep
+```
