--- a/Linux/Debug/debug/tools/perf/9. perf kvm.md
+++ b/Linux/Debug/debug/tools/perf/9. perf kvm.md
@@ -39,10 +39,11 @@ perf kvm有几个变体:
 
 * `perf kvm [options] top <command>`: 用于实时生成并显示虚拟机操作系统的性能数据
 * `perf kvm record <command>`: 记录性能数据并保存到文件. 
-    * 默认情况下, `perf.data.guest`
-    * 如果 `--host` 和 `--guest` 均在命令中使用，输出将被储存在 `perf.data.kvm` 中。
-    * 如果只有 `--host` 被使用，文件将被命名为 `perf.data.host`。
-    * 同样地，如果仅有 `--guest` 被使用，文件将被命名为 `perf.data.guest`。
+    * 默认情况下, 使用`--guest`, `perf.data.guest`
+    * `--host`, `perf.data.kvm`
+    * `--guest`, `perf.data.guest`
+    * `--host --guest`，`perf.data.kvm`
+    * `--host --no-guest`,  `perf.data.host`
 * `perf kvm report`: 读取`perf kvm record`输出, 显示性能分析数据
 * `perf kvm diff`: 显示两个`perf kvm record`记录的数据的不同
 * `perf kvm buildid-list`:
@@ -196,5 +197,11 @@ benchmark或业务性能较差
 1. 抓取正常情况下kvm性能数据
 
 ```
-./perf kvm stat record -a -p 178264 sleep
+./perf kvm stat record -a -p 178264
+```
+
+再跑benchmark抓取数据
+
+```
+./perf kvm stat record -a -p 178264
 ```
