--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/9. perf kvm.md
+++ b/Linux/Debug/debug/tools/perf/9. perf kvm.md
@@ -13,6 +13,7 @@
 - [相关资料](#相关资料)
 - [例子](#例子)
   - [背景](#背景)
+- [问题](#问题)
 
 <!-- /code_chunk_output -->
 
@@ -205,3 +206,12 @@ benchmark或业务性能较差
 ```
 ./perf kvm stat record -a -p 178264
 ```
+
+
+# 问题
+
+1. ./perf kvm  sleep ??
+
+怎么控制时间? timeout?
+
+2. 
