--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/4. perf record.md
+++ b/Linux/Debug/debug/tools/perf/4. perf record.md
@@ -8,6 +8,7 @@
 - [3. 参数介绍](#3-参数介绍)
   - [3.1. 常用参数](#31-常用参数)
   - [](#)
+- [例子](#例子)
 
 <!-- /code_chunk_output -->
 
@@ -41,3 +42,25 @@ perf record [-e <EVENT> | --event=EVENT] [-l] [-a] -- <command> [<options>]
 * `'-u <uid>'`: 只分析用户`<uid>`创建的进程
 
 ## 
+
+
+# 例子
+
+记录nginx进程的性能数据：
+
+```
+# perf record -p `pgrep -d ',' nginx`
+```
+
+记录**执行ls**时的**性能数据**：
+
+
+```
+# perf record ls -g
+```
+
+记录执行ls时的系统调用，可以知道哪些系统调用最频繁：
+
+```
+# perf record -e syscalls:sys_enter ls
+```
