--- a/Linux/Debug/debug/tools/perf/9. perf kvm.md
+++ b/Linux/Debug/debug/tools/perf/9. perf kvm.md
@@ -54,6 +54,20 @@ perf kvm有几个变体:
 * `perf kvm stat report`: 报告统计数据, 包括events处理时间, 采样等等.
 
 
+
+```
+# ./perf kvm stat report -h
+
+ Usage: perf kvm stat report [<options>]
+
+    -f, --force           don't complain, do it
+    -k, --key <sort-key>  key for sorting: sample(sort by samples number) time (sort by avg time)
+    -p, --pid <pid>       analyze events only for given process id(s)
+        --event <report event>
+                          event for reporting: vmexit, mmio (x86 only), ioport (x86 only)
+        --vcpu <n>        vcpu id to report
+```
+
 # 3. 获取guest的kallsyms和modules文件
 
 为了能够让kvm子工具正确解析guest的符号，我们首先需要把guest系统的/proc/kallsyms和 /proc/modules文件拷贝到host中。
@@ -198,20 +212,57 @@ benchmark或业务性能较差
 1. 抓取正常情况下kvm性能数据
 
 ```
+./perf kvm stat record -a -p XXX sleep 10
+./perf kvm stat report
+
+
+Analyze events for all VMs, all VCPUs:
+
+             VM-EXIT    Samples  Samples%     Time%    Min Time    Max Time         Avg time
+
+           interrupt     569829    99.19%    98.94%      0.29us     72.07us      0.52us ( +-   0.16% )
+                 msr       4638     0.81%     1.06%      0.34us      4.42us      0.68us ( +-   0.47% )
+               vintr          3     0.00%     0.00%      0.72us      1.32us      1.00us ( +-  17.56% )
+
+Total Samples:574470, Total events handled time:297227.96us.
+```
+
+```
 ./perf kvm stat record -a -p 178264
+./perf kvm stat report
+
+
+Analyze events for all VMs, all VCPUs:
+
+             VM-EXIT    Samples  Samples%     Time%    Min Time    Max Time         Avg time
+
+           interrupt     569829    99.19%    98.94%      0.29us     72.07us      0.52us ( +-   0.16% )
+                 msr       4638     0.81%     1.06%      0.34us      4.42us      0.68us ( +-   0.47% )
+               vintr          3     0.00%     0.00%      0.72us      1.32us      1.00us ( +-  17.56% )
+
+Total Samples:574470, Total events handled time:297227.96us.
 ```
 
 再跑benchmark抓取数据
 
 ```
 ./perf kvm stat record -a -p 178264
+
 ```
+
+可以看到有大量IO指令, 进一步分析IO具体是什么
+
+```
+./perf kvm stat report --event=ioport
+```
+
+
 
 
 # 问题
 
-1. ./perf kvm  sleep ??
+1. ./perf kvm stat record -a -p XXX sleep 10
 
-怎么控制时间? timeout?
+为何要sleep? 怎么控制时间? timeout?
 
 2. 
