--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/6. tracepoint.md
+++ b/Linux/Debug/debug/tools/perf/6. tracepoint.md
@@ -1,8 +1,7 @@
 
 # 用途
 
-在内核的 tracepoint 中可以插入 hook function ，以追踪内
-核的执行流。
+在内核的 tracepoint 中可以插入 hook function ，以追踪内核的执行流。
 
 Perf 将 tracepoint 作为性能事件
 
