--- a/Linux/Debug/debug/tools/perf/9. perf kvm.md
+++ b/Linux/Debug/debug/tools/perf/9. perf kvm.md
@@ -205,27 +205,28 @@ https://blog.csdn.net/x_i_y_u_e/article/details/48466031
 
 # 例子
 
+1. https://lwn.net/Articles/513317/
+
+2. XXX
+
 ## 背景
 
 benchmark或业务性能较差
 
-1. 抓取正常情况下kvm性能数据
-
 ```
 ./perf kvm stat record -a -p XXX sleep 10
 ./perf kvm stat report
-
-
-Analyze events for all VMs, all VCPUs:
-
-             VM-EXIT    Samples  Samples%     Time%    Min Time    Max Time         Avg time
-
-           interrupt     569829    99.19%    98.94%      0.29us     72.07us      0.52us ( +-   0.16% )
-                 msr       4638     0.81%     1.06%      0.34us      4.42us      0.68us ( +-   0.47% )
-               vintr          3     0.00%     0.00%      0.72us      1.32us      1.00us ( +-  17.56% )
-
-Total Samples:574470, Total events handled time:297227.96us.
 ```
+
+可以看到有大量IO指令, 进一步分析IO具体是什么
+
+```
+./perf kvm stat report --event=ioport
+```
+
+
+1. 抓取正常情况下kvm性能数据
+
 
 ```
 ./perf kvm stat record -a -p 178264
@@ -247,14 +248,36 @@ Total Samples:574470, Total events handled time:297227.96us.
 
 ```
 ./perf kvm stat record -a -p 178264
+./perf kvm stat report
 
+
+Analyze events for all VMs, all VCPUs:
+
+             VM-EXIT    Samples  Samples%     Time%    Min Time    Max Time         Avg time
+
+           interrupt     530773    95.22%    94.84%      0.29us     67.22us      0.65us ( +-   0.17% )
+                 msr      26371     4.73%     5.09%      0.32us      8.85us      0.70us ( +-   0.23% )
+               vintr        300     0.05%     0.07%      0.55us      1.69us      0.83us ( +-   1.00% )
+                 nmi          1     0.00%     0.00%      0.41us      0.41us      0.41us ( +-   0.00% )
+
+# ./perf kvm stat report --event=vmexit
+
+
+Analyze events for all VMs, all VCPUs:
+
+             VM-EXIT    Samples  Samples%     Time%    Min Time    Max Time         Avg time
+
+           interrupt     530773    95.22%    94.84%      0.29us     67.22us      0.65us ( +-   0.17% )
+                 msr      26371     4.73%     5.09%      0.32us      8.85us      0.70us ( +-   0.23% )
+               vintr        300     0.05%     0.07%      0.55us      1.69us      0.83us ( +-   1.00% )
+                 nmi          1     0.00%     0.00%      0.41us      0.41us      0.41us ( +-   0.00% )
+
+Total Samples:557445, Total events handled time:364849.75us.
 ```
 
-可以看到有大量IO指令, 进一步分析IO具体是什么
+msr和vintr变多, 尤其msr, 进一步分析msr是什么
 
-```
-./perf kvm stat report --event=ioport
-```
+
 
 
 
@@ -265,4 +288,4 @@ Total Samples:574470, Total events handled time:297227.96us.
 
 为何要sleep? 怎么控制时间? timeout?
 
-2. 
+2. msr变多? 如何监控
