--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/9. perf kvm.md
+++ b/Linux/Debug/debug/tools/perf/9. perf kvm.md
@@ -197,7 +197,7 @@ tools/perf/Documentation/
 
 https://lwn.net/Articles/513317/
 
-
+https://www.linux-kvm.org/page/Perf_events
 
 https://blog.csdn.net/x_i_y_u_e/article/details/48466031
 
@@ -276,6 +276,12 @@ Total Samples:557445, Total events handled time:364849.75us.
 ```
 
 msr和vintr变多, 尤其msr, 进一步分析msr是什么
+
+```
+cd /sys/kernel/debug/tracing/events/kvm/kvm_msr
+echo 1 > enable
+cat /sys/kernel/debug/tracing/trace_pipe
+```
 
 
 
