--- a/Virtualization/KVM/6. 虚拟机时钟模拟/2. PIT(8254)模拟.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/2. PIT(8254)模拟.md
@@ -25,8 +25,8 @@
   - [6.3. create_pit_timer(): 创建定时器](#63-create_pit_timer-创建定时器)
 - [7. pit_timer_fn(): 定时器中断函数](#7-pit_timer_fn-定时器中断函数)
   - [7.1. pit_do_work(): 时钟中断注入](#71-pit_do_work-时钟中断注入)
-  - [pit的 kvm_set_irq: 触发中断](#pit的-kvm_set_irq-触发中断)
-  - [7.2. 定时器的中断ack](#72-定时器的中断ack)
+  - [7.2. pit的 kvm_set_irq: 触发中断](#72-pit的-kvm_set_irq-触发中断)
+  - [7.3. 定时器的中断ack](#73-定时器的中断ack)
 
 <!-- /code_chunk_output -->
 
@@ -806,7 +806,7 @@ static void pit_do_work(struct kthread_work *work)
 
 `kvm_apic_nmi_wd_deliver`最终会调用到`__apic_accept_irq`，在该函数里，设置**中断标志位**，然后通过`kvm_kick_vcpu`将**vcpu拉回到host**，等到**vcpu重新进入guest**时，将**中断信息**注入到**vmcs结构体**里，这样**vcpu回到guest**后就可以**处理tick中断**了。
 
-## pit的 kvm_set_irq: 触发中断
+## 7.2. pit的 kvm_set_irq: 触发中断
 
 `kvm_set_irq`会触发中断, 详细见`中断虚拟化`. 根据irq查找所有的中断路由项, 然后遍历调用**每个路由实体**的set触发函数. 
 
@@ -841,7 +841,7 @@ static const struct kvm_irq_routing_entry default_routing[] = {
 
 
 
-## 7.2. 定时器的中断ack
+## 7.3. 定时器的中断ack
 
 之前在pit初始化时候注册了中断ack函数, `pit_state->irq_ack_notifier.irq_acked = kvm_pit_ack_irq;`, 它会在**中断注入以后**被**中断控制器调用**。
 
