--- a/Virtualization/KVM/6. 虚拟机时钟模拟/1. 基本原理.md
+++ b/Virtualization/KVM/6. 虚拟机时钟模拟/1. 基本原理.md
@@ -63,7 +63,7 @@ kvm支持的时钟有8254,local apic timer,kvmclock等
 
 # 4. hrtimer
 
-hrtimer，不是时钟源，只是一种高精准**软件时钟**定时器，Linux一般用这个来计算ticker, 定时器的真实物理时钟源根据不同的硬件而不同
+hrtimer，不是时钟源，只是一种**高精准软件时钟**定时器，Linux一般用这个来计算ticker, 定时器的真实物理时钟源根据不同的硬件而不同
 
 可作为超时或周期性定时器使用
 
