--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/5. VM-exit.md
+++ b/Virtualization/KVM/3. CPU虚拟化/5. VM-exit.md
@@ -51,7 +51,9 @@ Perf主要是利用**PMU**、**tracepoint**和内核中的**特殊计数器**来
 
 ## GDB
 
-Gdb是GNU开源组织发布的一个强大的UNIX下的程序调试工具。我们在这里提到使用Gdb跟踪`vm-exit`事件主要是考虑可以跟踪进入ioctl之后退出逻辑的处理，在这个退出逻辑里，可以使用Gdb跟踪**用户层程序qemu**对于vm-exit事件的**处理流程**。
+Gdb是GNU开源组织发布的一个强大的UNIX下的程序调试工具。
+
+我们在这里提到使用Gdb跟踪`vm-exit`事件主要是考虑可以跟踪进入ioctl之后退出逻辑的处理，在这个退出逻辑里，可以使用Gdb跟踪**用户层程序qemu**对于vm-exit事件的**处理流程**。
 
 ## Qemu-event
 
