--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/5. VM-exit.md
+++ b/Virtualization/KVM/3. CPU虚拟化/5. VM-exit.md
@@ -57,7 +57,9 @@ Gdb是GNU开源组织发布的一个强大的UNIX下的程序调试工具。
 
 ## Qemu-event
 
-在qemu里面追踪event事件这个特性是由qemu提供的，该功能主要用来进行debug、性能分析或者监测qemu运行状况。要使用该功能，需要在编译qemu的时候增加配置项--enable-trace-backends=simple，但打开这个配置项之后，qemu的运行性能会有一定的损耗，可以跟踪的qemu-event可以通过qemu提供的交互命令info trace-events列出来，具体的使用可以参考qemu提供的功能说明文档进行操作。不过因为使用这个工具需要重新编译qemu，使用上会有一些不方便。
+在qemu里面追踪**event事件**这个特性是由qemu提供的，该功能主要用来进行debug、性能分析或者监测qemu运行状况。
+
+要使用该功能，需要在编译qemu的时候增加配置项--enable-trace-backends=simple，但打开这个配置项之后，qemu的运行性能会有一定的损耗，可以跟踪的qemu-event可以通过qemu提供的交互命令info trace-events列出来，具体的使用可以参考qemu提供的功能说明文档进行操作。不过因为使用这个工具需要重新编译qemu，使用上会有一些不方便。
 
 # VM-RUN整体处理逻辑
 
