--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/5. VM-exit.md
+++ b/Virtualization/KVM/3. CPU虚拟化/5. VM-exit.md
@@ -59,17 +59,17 @@ Gdb是GNU开源组织发布的一个强大的UNIX下的程序调试工具。
 
 在qemu里面追踪**event事件**这个特性是由qemu提供的，该功能主要用来进行debug、性能分析或者监测qemu运行状况。
 
-要使用该功能，需要在编译qemu的时候增加配置项--enable-trace-backends=simple，但打开这个配置项之后，qemu的运行性能会有一定的损耗，可以跟踪的qemu-event可以通过qemu提供的交互命令info trace-events列出来，具体的使用可以参考qemu提供的功能说明文档进行操作。不过因为使用这个工具需要重新编译qemu，使用上会有一些不方便。
+要使用该功能，需要在编译qemu的时候增加配置项`--enable-trace-backends=simple`，但打开这个配置项之后，qemu的运行性能会有一定的损耗，可以跟踪的`qemu-event`可以通过qemu提供的交互命令`info trace-events`列出来，具体的使用可以参考qemu提供的功能说明文档进行操作。不过因为使用这个工具需要重新编译qemu，使用上会有一些不方便。
 
 # VM-RUN整体处理逻辑
 
-从前面的叙述也可以知道，VM-Run的最初发起方肯定是qemu的一个vcpu线程，其通过调用ioctl系统函数进入kvm的vcpu处理逻辑，之后会通过判断虚机当前的状态，一切都合适的话会陷入vmx-t状态，在虚机触发vm-exit之后，会返回宿主机上下文，然后处理当前的退出事件，之后判断是否需要再次进入vmx-t状态。其在kvm中，代码上面的流程为：
+从前面的叙述也可以知道，`VM-Run`的最初发起方肯定是**qemu**的**一个vcpu线程**，其通过调用ioctl系统函数进入kvm的vcpu处理逻辑，之后会通过判断虚机当前的状态，一切都合适的话会陷入vmx-t状态，在虚机触发vm-exit之后，会返回宿主机上下文，然后处理当前的退出事件，之后判断是否需要再次进入vmx-t状态。其在kvm中，代码上面的流程为：
 
 ```cpp
 
 ```
 
-这里主要的调用函数是kvm_arch_vcpu_iocto_run函数，会依据当前的架构体系调用不同的函数，x86上面的实现函数是:
+这里主要的调用函数是`kvm_arch_vcpu_iocto_run`函数，会依据当前的架构体系调用不同的函数，x86上面的实现函数是:
 
 ```cpp
 
