--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/5. VM-exit.md
+++ b/Virtualization/KVM/3. CPU虚拟化/5. VM-exit.md
@@ -66,7 +66,28 @@ Gdb是GNU开源组织发布的一个强大的UNIX下的程序调试工具。
 从前面的叙述也可以知道，`VM-Run`的最初发起方肯定是**qemu**的**一个vcpu线程**，其通过调用ioctl系统函数进入kvm的vcpu处理逻辑，之后会通过判断虚机当前的状态，一切都合适的话会陷入vmx-t状态，在虚机触发vm-exit之后，会返回宿主机上下文，然后处理当前的退出事件，之后判断是否需要再次进入vmx-t状态。其在kvm中，代码上面的流程为：
 
 ```cpp
+// virt/kvm/kvm_main.c
+static long kvm_vcpu_ioctl(struct file *filp,
+			   unsigned int ioctl, unsigned long arg)
+{
+    case KVM_RUN:
+		r = -EINVAL;
+		if (arg)
+			goto out;
+		if (unlikely(vcpu->pid != current->pids[PIDTYPE_PID].pid)) {
+			/* The thread running this VCPU changed. */
+			struct pid *oldpid = vcpu->pid;
+			struct pid *newpid = get_task_pid(current, PIDTYPE_PID);
 
+			rcu_assign_pointer(vcpu->pid, newpid);
+			if (oldpid)
+				synchronize_rcu();
+			put_pid(oldpid);
+		}
+		r = kvm_arch_vcpu_ioctl_run(vcpu, vcpu->run);
+		trace_kvm_userspace_exit(vcpu->run->exit_reason, r);
+		break;
+}
 ```
 
 这里主要的调用函数是`kvm_arch_vcpu_iocto_run`函数，会依据当前的架构体系调用不同的函数，x86上面的实现函数是:
