--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/5. VM-exit.md
+++ b/Virtualization/KVM/3. CPU虚拟化/5. VM-exit.md
@@ -90,7 +90,7 @@ static long kvm_vcpu_ioctl(struct file *filp,
 }
 ```
 
-这里主要的调用函数是`kvm_arch_vcpu_iocto_run`函数，会依据当前的架构体系调用不同的函数，x86上面的实现函数是:
+这里主要的调用函数是`kvm_arch_vcpu_ioctl_run`函数，会依据当前的架构体系调用不同的函数，x86上面的实现函数是:
 
 ```cpp
 
