--- Auto-Git Commit ---

--- a/Virtualization/KVM/3. CPU虚拟化/5. VM-exit.md
+++ b/Virtualization/KVM/3. CPU虚拟化/5. VM-exit.md
@@ -96,13 +96,13 @@ static long kvm_vcpu_ioctl(struct file *filp,
 
 ```
 
-在这个函数处理体中，会再次进行一些状态判断，例如本线程是否有待处理信号，并对多核架构的系统判断多核系统是否初始化完毕，没有的话，会在这里进行一个挂起操作。本函数最主要的入口点是vcpu_run，在这个函数里面，会真正实现循环进入虚机的处理体。
+在这个函数处理体中，会再次进行一些状态判断，例如本线程**是否有待处理信号**，并对**多核架构**的系统判断**多核系统是否初始化完毕**，没有的话，会在这里进行一个**挂起操作**。本函数最主要的入口点是`vcpu_run`，在这个函数里面，会真正实现循环进入虚机的处理体。
 
 ```cpp
 
 ```
 
-从这个while（1）的循环中，可以看出这里的退出逻辑是进入虚机的调用返回小于等于的值，所以返回大于的话，用户空间的ioctl调用会一直没有返回，但即使没有返回用户层，也不会导致本物理核上的其他进程迟迟得不到响应，因为在最后会有一个类似schedule的调用。
+从这个`while(1)`的循环中，可以看出这里的退出逻辑是进入虚机的调用返回小于等于的值，所以返回大于的话，用户空间的ioctl调用会一直没有返回，但即使没有返回用户层，也不会导致本物理核上的其他进程迟迟得不到响应，因为在最后会有一个类似schedule的调用。
 
 本阶段最重要的实现函数是vcpu_enter_guest，在这个函数里面会完成直接的状态判断，模式切换，并判断处理最后的vmexit事件。
 
