--- a/Virtualization/KVM/3. CPU虚拟化/5. VM-exit.md
+++ b/Virtualization/KVM/3. CPU虚拟化/5. VM-exit.md
@@ -93,18 +93,26 @@ static long kvm_vcpu_ioctl(struct file *filp,
 这里主要的调用函数是`kvm_arch_vcpu_ioctl_run`函数，会依据当前的架构体系调用不同的函数，x86上面的实现函数是:
 
 ```cpp
-
+int kvm_arch_vcpu_ioctl_run(struct kvm_vcpu *vcpu,struct kvm_run *kvm_run)
 ```
 
 在这个函数处理体中，会再次进行一些状态判断，例如本线程**是否有待处理信号**，并对**多核架构**的系统判断**多核系统是否初始化完毕**，没有的话，会在这里进行一个**挂起操作**。本函数最主要的入口点是`vcpu_run`，在这个函数里面，会真正实现循环进入虚机的处理体。
 
 ```cpp
+static int vcpu_run(struct kvm_vcpu *vcpu)
+```
+
+从这个`while(1)`的循环中，可以看出这里的退出逻辑是**进入虚机的调用返回小于等于的值**，所以返回大于的话，用户空间的ioctl调用会一直没有返回，但即使没有返回用户层，也不会导致本物理核上的其他进程迟迟得不到响应，因为在最后会有一个类似schedule的调用。
+
+本阶段最重要的实现函数是`vcpu_enter_guest`，在这个函数里面会完成直接的状态判断，模式切换，并判断处理最后的vmexit事件。
+
+```cpp
+static int vcpu_enter_guest(struct kvm_vcpu *vcpu)
 
 ```
 
-从这个`while(1)`的循环中，可以看出这里的退出逻辑是进入虚机的调用返回小于等于的值，所以返回大于的话，用户空间的ioctl调用会一直没有返回，但即使没有返回用户层，也不会导致本物理核上的其他进程迟迟得不到响应，因为在最后会有一个类似schedule的调用。
+本函数是虚拟化切换最直接的处理函数，功能实现的关键点涉及最多，进入vmx-t模式运行是通过调用体系钩子函数`kvm_x86_ops->run(vcpu)`实现，在之后的分类事件处理是通过体系注册钩子函数这个`kvm_x86_ops->handle_exit(vcpu)`实现，对于vmx架构，真实的函数体是在vmx.c文件里面的`static int (*const kvm_vmx_exit_handlers[])(struct kvm_vcpu *vcpu)`。可以参考具体函数跟踪其实现。
 
-本阶段最重要的实现函数是vcpu_enter_guest，在这个函数里面会完成直接的状态判断，模式切换，并判断处理最后的vmexit事件。
 
 
 
