--- Auto-Git Commit ---

--- a/Linux/Memory/系统学习/内存管理全教程(必看)/01-description/05-highmem/5. 内存描述之高端内存.md
+++ b/Linux/Memory/系统学习/内存管理全教程(必看)/01-description/05-highmem/5. 内存描述之高端内存.md
@@ -1,4 +1,43 @@
 
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [1 前景回顾](#1-前景回顾)
+- [1.1 UMA和NUMA两种模型](#11-uma和numa两种模型)
+  - [1.2 Linux如何描述物理内存](#12-linux如何描述物理内存)
+  - [1.3 典型架构(x86)上内存区域划分](#13-典型架构x86上内存区域划分)
+- [2 内核空间和用户空间](#2-内核空间和用户空间)
+  - [2.1 把内核空间和用户空间分开](#21-把内核空间和用户空间分开)
+  - [2.2 linux为什么把内核映射到3G-4G这个地址呢](#22-linux为什么把内核映射到3g-4g这个地址呢)
+  - [2.3 应用程序线性地址和动态内存分配](#23-应用程序线性地址和动态内存分配)
+  - [2.4 高端内存和低端内存的划分](#24-高端内存和低端内存的划分)
+  - [2.5 低端内存和高端内存](#25-低端内存和高端内存)
+  - [2.6 例子](#26-例子)
+- [3 Linux内核高端内存的由来](#3-linux内核高端内存的由来)
+  - [3.1 为什么需要高端内存？](#31-为什么需要高端内存)
+  - [3.2 内核空间高端内存](#32-内核空间高端内存)
+  - [3.3 Linux内核高端内存的理解](#33-linux内核高端内存的理解)
+  - [4 Linux内核高端内存的划分与映射](#4-linux内核高端内存的划分与映射)
+  - [4.1 映射到"内核动态映射空间"(noncontiguous memory allocation)](#41-映射到内核动态映射空间noncontiguous-memory-allocation)
+  - [4.2 持久内核映射(permanent kernel mapping)](#42-持久内核映射permanent-kernel-mapping)
+  - [4.3 临时映射（temporary kernel mapping）](#43-临时映射temporary-kernel-mapping)
+- [5 页框管理](#5-页框管理)
+  - [5.1 页框管理](#51-页框管理)
+  - [5.2 保留的页框池](#52-保留的页框池)
+- [6 常见问题](#6-常见问题)
+  - [6.1 用户空间（进程）是否有高端内存概念？](#61-用户空间进程是否有高端内存概念)
+  - [6.2 64位内核中有高端内存吗？](#62-64位内核中有高端内存吗)
+  - [6.3 用户进程能访问多少物理内存？内核代码能访问多少物理内存？](#63-用户进程能访问多少物理内存内核代码能访问多少物理内存)
+  - [6.4 高端内存和物理地址、逻辑地址、线性地址的关系？](#64-高端内存和物理地址-逻辑地址-线性地址的关系)
+  - [6.5 为什么不把所有的地址空间都分配给内核？](#65-为什么不把所有的地址空间都分配给内核)
+- [7 小结](#7-小结)
+  - [7.1 虚拟内核空间到物理空间的映射](#71-虚拟内核空间到物理空间的映射)
+  - [7.2 内核映像](#72-内核映像)
+  - [7.3 高端内存映射方式](#73-高端内存映射方式)
+
+<!-- /code_chunk_output -->
+
 http://blog.csdn.net/vanbreaker/article/details/7579941
 
 # 1 前景回顾
