--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第4篇 虚拟化软件开发接口/第8章 libvirt虚拟化控制中间件/1. libvirt概述.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第4篇 虚拟化软件开发接口/第8章 libvirt虚拟化控制中间件/1. libvirt概述.md
@@ -1,3 +1,17 @@
+
+<!-- @import "[TOC]" {cmd="toc" depthFrom=1 depthTo=6 orderedList=false} -->
+
+<!-- code_chunk_output -->
+
+- [libvirt简介及使用样例](#libvirt简介及使用样例)
+- [基于libvirt所开发的开源应用](#基于libvirt所开发的开源应用)
+- [安装与配置](#安装与配置)
+  - [Windows环境下的安装配置](#windows环境下的安装配置)
+  - [Linux环境下的安装配置](#linux环境下的安装配置)
+    - [源码编译](#源码编译)
+
+<!-- /code_chunk_output -->
+
 libvirt 是一种用来构建应用程序的强大库，能够跨系统的大型网络在不同的虚拟机监控程序环境中管理域。当今社会，云计算飞速发展，libvirt 必将随之发展，不断获得新的应用程序和用户。
 
 # libvirt简介及使用样例
@@ -24,15 +38,17 @@ libvirt 的功能强大，目前有大量的应用程序正成功构建于 libvi
 
 # 安装与配置
 
-1. Windows环境下的安装配置
+## Windows环境下的安装配置
 
 libvirt在Windows环境下的安装非常简单，只需要下载可执行安装程序，运行安装即可。安装程序的下载地址可以参考如下网址。
 
 http://libvirt.org/sources/win32_experimental/Libvirt-0.8.8-0.exe
 
-2. Linux环境下的安装配置
+## Linux环境下的安装配置
 
-libvirt在Linux环境下的安装有两种方式，具体介绍如下。
+libvirt在Linux环境下的安装有**两种方式**，具体介绍如下。
+
+### 源码编译
 
 （1）编译源码包
 
@@ -70,7 +86,8 @@ libvirt的GIT安装步骤具体介绍如下。
 代码8-3 GIT更新
 
 ```
-￼$ git clone git://libvirt.org/libvirt.git
+git://libvirt.org/libvirt.git
+https://libvirt.org/git/libvirt.git
 ```
 
 2）使用autogen.sh命令进行编译，进而完成安装。
