--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第4篇 虚拟化软件开发接口/第8章 libvirt虚拟化控制中间件/1. libvirt概述.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第4篇 虚拟化软件开发接口/第8章 libvirt虚拟化控制中间件/1. libvirt概述.md
@@ -9,6 +9,7 @@
   - [Windows环境下的安装配置](#windows环境下的安装配置)
   - [Linux环境下的安装配置](#linux环境下的安装配置)
     - [源码编译](#源码编译)
+    - [GIT安装](#git安装)
 
 <!-- /code_chunk_output -->
 
@@ -77,6 +78,8 @@ $ make￼
 $ sudo make install
 ```
 
+### GIT安装
+
 （2）GIT安装
 
 libvirt的GIT安装步骤具体介绍如下。
@@ -93,7 +96,6 @@ https://libvirt.org/git/libvirt.git
 2）使用autogen.sh命令进行编译，进而完成安装。
 
 代码8-4 用autogen.sh命令进行编译
-
 
 ```
 $ ./autogen.sh --system
