--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第4篇 虚拟化软件开发接口/第8章 libvirt虚拟化控制中间件/1. libvirt概述.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第4篇 虚拟化软件开发接口/第8章 libvirt虚拟化控制中间件/1. libvirt概述.md
@@ -3,7 +3,7 @@
 
 <!-- code_chunk_output -->
 
-- [libvirt简介及使用样例](#libvirt简介及使用样例)
+- [libvirt简介](#libvirt简介)
 - [基于libvirt所开发的开源应用](#基于libvirt所开发的开源应用)
 - [安装与配置](#安装与配置)
   - [Windows环境下的安装配置](#windows环境下的安装配置)
@@ -13,9 +13,7 @@
 
 <!-- /code_chunk_output -->
 
-libvirt 是一种用来构建应用程序的强大库，能够跨系统的大型网络在不同的虚拟机监控程序环境中管理域。当今社会，云计算飞速发展，libvirt 必将随之发展，不断获得新的应用程序和用户。
-
-# libvirt简介及使用样例
+# libvirt简介
 
 libvirt是一套免费、开源的支持Linux下主流虚拟化工具的C函数库，支持与C、C++、Ruby、Python等多种主流开发语言的绑定。
 
@@ -34,9 +32,17 @@ libvirt支持各种虚拟机监控程序，包括Xen、KVM，以及QEMU和用于
 
 # 基于libvirt所开发的开源应用
 
-libvirt 的功能强大，目前有大量的应用程序正成功构建于 libvirt 之上。其中一个有趣的应用程序就是 virsh，它是一种虚拟 shell。还有一种名为virt-install 的应用程序，它可用于从多个操作系统发行版供应新域。virt-clone可用于从另一个 VM 复制 VM（既包括操作系统复制，也包括磁盘复制）。一些高级应用程序包括多用途桌面管理工具 virt-manager 和安全连接到 VM图形控制台的轻量级工具 virt-viewer。
+libvirt 的功能强大，目前有大量的应用程序正成功构建于 **libvirt** 之上。
 
-构建于libvirt之上的一种最重要的工具名为oVirt。oVirt VM管理应用程序旨在管理单个结点上的单个 VM 或多个主机上的大量 VM。除了可以简化大量的主机和VM的管理外，它还可用于跨平台和架构自动化集群，负载平衡和工作。
+其中一个有趣的应用程序就是 **virsh**，它是一种虚拟 shell。
+
+还有一种名为**virt-install** 的应用程序，它可用于从多个操作系统发行版供应新域。
+
+**virt-clone**可用于从另一个 VM 复制 VM（既包括操作系统复制，也包括磁盘复制）。
+
+一些高级应用程序包括多用途桌面管理工具 virt-manager 和安全连接到 VM图形控制台的轻量级工具 **virt-viewer**。
+
+构建于libvirt之上的一种最重要的工具名为**oVirt**。oVirt VM管理应用程序旨在管理单个结点上的单个 VM 或多个主机上的大量 VM。除了可以简化大量的主机和VM的管理外，它还可用于跨平台和架构自动化集群，负载平衡和工作。
 
 # 安装与配置
 
