--- Auto-Git Commit ---

--- a/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第4篇 虚拟化软件开发接口/第8章 libvirt虚拟化控制中间件/1. libvirt概述.md
+++ b/Virtualization/Learning/KVM实战: 原理、进阶与性能调优/第4篇 虚拟化软件开发接口/第8章 libvirt虚拟化控制中间件/1. libvirt概述.md
@@ -79,7 +79,10 @@ $ cd libvirt-x.x.x
 
 代码8-2 编译安装
 
+注意：如果./configure不带任何参数，各种文件会被安装到诸如/usr/local，/var/local下面，这样和原生安装路径不一致，通常不要这样安装
+
 ```
+# ./configure --prefix=/usr --localstatedir=/var  --sysconfdir=/etc --enable-debug=yes
 $ ./configure [possible options]￼
 $ make￼
 $ sudo make install
@@ -111,7 +114,7 @@ $ make￼
 $ sudo make install
 ```
 
-注意, libvirt不允许在源码目录执行编译安装
+注意, libvirt**不允许**在**源码目录**执行编译安装
 
 ```
 # Create a build directory to isolate source directory
