--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/9. perf kvm.md
+++ b/Linux/Debug/debug/tools/perf/9. perf kvm.md
@@ -229,7 +229,7 @@ benchmark或业务性能较差
 
 
 ```
-./perf kvm stat record -a -p 178264
+./perf kvm stat record -a -p 178264 sleep 10
 ./perf kvm stat report
 
 
@@ -237,17 +237,17 @@ Analyze events for all VMs, all VCPUs:
 
              VM-EXIT    Samples  Samples%     Time%    Min Time    Max Time         Avg time
 
-           interrupt     569829    99.19%    98.94%      0.29us     72.07us      0.52us ( +-   0.16% )
-                 msr       4638     0.81%     1.06%      0.34us      4.42us      0.68us ( +-   0.47% )
-               vintr          3     0.00%     0.00%      0.72us      1.32us      1.00us ( +-  17.56% )
+           interrupt     619522    99.28%    99.01%      0.30us     88.06us      0.57us ( +-   0.14% )
+                 msr       4517     0.72%     0.99%      0.34us      4.22us      0.78us ( +-   0.58% )
+               vintr          2     0.00%     0.00%      0.67us      0.96us      0.82us ( +-  17.77% )
 
-Total Samples:574470, Total events handled time:297227.96us.
+Total Samples:624041, Total events handled time:356509.21us.
 ```
 
 再跑benchmark抓取数据
 
 ```
-./perf kvm stat record -a -p 178264
+./perf kvm stat record -a -p 178264  sleep 10
 ./perf kvm stat report
 
 
@@ -255,10 +255,14 @@ Analyze events for all VMs, all VCPUs:
 
              VM-EXIT    Samples  Samples%     Time%    Min Time    Max Time         Avg time
 
-           interrupt     530773    95.22%    94.84%      0.29us     67.22us      0.65us ( +-   0.17% )
-                 msr      26371     4.73%     5.09%      0.32us      8.85us      0.70us ( +-   0.23% )
-               vintr        300     0.05%     0.07%      0.55us      1.69us      0.83us ( +-   1.00% )
-                 nmi          1     0.00%     0.00%      0.41us      0.41us      0.41us ( +-   0.00% )
+           interrupt     642835    94.55%    94.51%      0.29us    334.77us      0.71us ( +-   0.15% )
+                 msr      36484     5.37%     5.28%      0.31us      8.36us      0.70us ( +-   0.20% )
+               vintr        397     0.06%     0.07%      0.54us      1.94us      0.86us ( +-   1.07% )
+               cpuid        180     0.03%     0.04%      0.41us      3.75us      1.10us ( +-   3.44% )
+                 npf         21     0.00%     0.10%      4.15us    188.21us     22.74us ( +-  39.36% )
+                 nmi          1     0.00%     0.00%      0.82us      0.82us      0.82us ( +-   0.00% )
+
+Total Samples:679918, Total events handled time:481784.64us.
 
 # ./perf kvm stat report --event=vmexit
 
