--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/9. perf kvm.md
+++ b/Linux/Debug/debug/tools/perf/9. perf kvm.md
@@ -271,12 +271,14 @@ Analyze events for all VMs, all VCPUs:
 
              VM-EXIT    Samples  Samples%     Time%    Min Time    Max Time         Avg time
 
-           interrupt     530773    95.22%    94.84%      0.29us     67.22us      0.65us ( +-   0.17% )
-                 msr      26371     4.73%     5.09%      0.32us      8.85us      0.70us ( +-   0.23% )
-               vintr        300     0.05%     0.07%      0.55us      1.69us      0.83us ( +-   1.00% )
-                 nmi          1     0.00%     0.00%      0.41us      0.41us      0.41us ( +-   0.00% )
+           interrupt     642835    94.55%    94.51%      0.29us    334.77us      0.71us ( +-   0.15% )
+                 msr      36484     5.37%     5.28%      0.31us      8.36us      0.70us ( +-   0.20% )
+               vintr        397     0.06%     0.07%      0.54us      1.94us      0.86us ( +-   1.07% )
+               cpuid        180     0.03%     0.04%      0.41us      3.75us      1.10us ( +-   3.44% )
+                 npf         21     0.00%     0.10%      4.15us    188.21us     22.74us ( +-  39.36% )
+                 nmi          1     0.00%     0.00%      0.82us      0.82us      0.82us ( +-   0.00% )
 
-Total Samples:557445, Total events handled time:364849.75us.
+Total Samples:679918, Total events handled time:481784.64us.
 ```
 
 msr和vintr变多, 尤其msr, 进一步分析msr是什么
