--- a/Linux/Debug/debug/tools/perf/4. perf record.md
+++ b/Linux/Debug/debug/tools/perf/4. perf record.md
@@ -7,12 +7,14 @@
 - [2. 使用方法](#2-使用方法)
 - [3. 参数介绍](#3-参数介绍)
   - [3.1. 常用参数](#31-常用参数)
-  - [](#)
+  - [输出信息](#输出信息)
 - [例子](#例子)
 
 <!-- /code_chunk_output -->
 
 # 1. 用途
+
+记录一段时间内系统/进程的性能事件
 
 执行一个**指定应用程序**并且记录性能数据到perf.data文件, 该文件可以使用`perf report`进行解析.
 
@@ -41,7 +43,9 @@ perf record [-e <EVENT> | --event=EVENT] [-l] [-a] -- <command> [<options>]
 * `'-r <priority>'`: 将 perf top 作为实时任务，优先级为 `<priority>`
 * `'-u <uid>'`: 只分析用户`<uid>`创建的进程
 
-## 
+## 输出信息
+
+默认在当前目录下生成数据文件: perf.data
 
 
 # 例子
