--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -12,8 +12,8 @@
 - [3. Perf简介](#3-perf简介)
   - [3.1. 简单例子](#31-简单例子)
   - [3.2. 基本原理](#32-基本原理)
-  - [工作原理](#工作原理)
-    - [Symbols](#symbols)
+  - [3.3. 工作原理](#33-工作原理)
+    - [3.3.1. Symbols](#331-symbols)
 - [4. Perf功能概述](#4-perf功能概述)
   - [4.1. 全局性概况](#41-全局性概况)
   - [4.2. 全局细节](#42-全局细节)
@@ -23,11 +23,12 @@
 - [5. Perf性能事件](#5-perf性能事件)
   - [5.1. 三种类型性能事件](#51-三种类型性能事件)
   - [5.2. perf list查看所有性能事件](#52-perf-list查看所有性能事件)
-  - [5.3. 性能事件的属性](#53-性能事件的属性)
-    - [5.3.1. PMI中断和PEBS中断](#531-pmi中断和pebs中断)
-    - [5.3.2. 性能事件的精度级别](#532-性能事件的精度级别)
-    - [5.3.3. 其他属性](#533-其他属性)
-  - [5.3.4. 没有预定义字符描述的性能事件](#534-没有预定义字符描述的性能事件)
+  - [5.3. 性能事件指定错误](#53-性能事件指定错误)
+  - [5.4. 性能事件的属性](#54-性能事件的属性)
+    - [5.4.1. PMI中断和PEBS中断](#541-pmi中断和pebs中断)
+    - [5.4.2. 性能事件的精度级别](#542-性能事件的精度级别)
+    - [5.4.3. 其他属性](#543-其他属性)
+  - [5.5. 没有预定义字符描述的性能事件](#55-没有预定义字符描述的性能事件)
 
 <!-- /code_chunk_output -->
 
@@ -170,7 +171,7 @@ perf top -p $pid
 
 根据上述的perf采样原理可以得知，perf假设两次采样之间，即两次相邻的PMI中断之间系统执行的是同一个进程的同一个函数。这种假设会带来**一定的误差**，当感觉perf给出的**结果不准**时，不妨提高**采样频率**，perf会给出更加精确的结果。
 
-## 工作原理
+## 3.3. 工作原理
 
 perf利用Linux的trace特性，可以用于实时跟踪，统计event计数(perf stat)；或者使用采样(perf record)，报告(perf report|script|annotate)的使用方式进行诊断。
 
@@ -184,7 +185,7 @@ perf命令行接口并不能利用所有的Linux trace特性，有些trace需要
 
 我们看到perf支持这么多的事件和trace，它依赖了很多的接口来干这件事情。
 
-### Symbols
+### 3.3.1. Symbols
 
 没有符号表，无法将内存地址翻译成函数和变量名。
 
@@ -312,9 +313,29 @@ perf定义的性能事件分为3类，分别是硬件性能事件、软件性能
 
 ![2020-07-19-21-06-38.png](./images/2020-07-19-21-06-38.png)
 
-## 5.3. 性能事件的属性
+## 5.3. 性能事件指定错误
 
-### 5.3.1. PMI中断和PEBS中断
+所以如果指定性能事件失败, 可能会有类似打印
+
+```
+./perf record -e syscalls:sys_enter ls
+event syntax error: 'syscalls:sys_enter'
+                     \___ unknown tracepoint
+
+Error:	File /sys/kernel/debug/tracing/events/syscalls/sys_enter not found.
+Hint:	Perhaps this kernel misses some CONFIG_ setting to enable this feature?.
+
+Run 'perf list' for a list of valid events
+
+ Usage: perf record [<options>] [<command>]
+    or: perf record [<options>] -- <command> [<options>]
+
+    -e, --event <event>   event selector. use 'perf list' to list available events
+```
+
+## 5.4. 性能事件的属性
+
+### 5.4.1. PMI中断和PEBS中断
 
 **硬件性能事件**由处理器的PMU提供支持。
 
@@ -330,7 +351,7 @@ perf定义的性能事件分为3类，分别是硬件性能事件、软件性能
 perf top -e cycles:pp
 ```
 
-### 5.3.2. 性能事件的精度级别
+### 5.4.2. 性能事件的精度级别
 
 Perf 在采样精度上定义了 4 个级别.
 
@@ -343,7 +364,7 @@ Level | Comment
 
 目前X86处理器，包括Intel处理器与AMD处理器Jun仅能实现前3个精度级别。
 
-### 5.3.3. 其他属性
+### 5.4.3. 其他属性
 
 除了精度级别以外，事件还具有其他几个属性，均可以通过"event:X"的方式予以指定。
 
@@ -356,7 +377,7 @@ G | 在KVM虚拟机中，仅攻击Guest系统触发的性能事件。
 H | 仅统计Host系统触发的性能事件。
 p | 精度级别。
 
-## 5.3.4. 没有预定义字符描述的性能事件
+## 5.5. 没有预定义字符描述的性能事件
 
 另外需要补充的是，perf list工具仅列出了具有字符描述的**硬件性能事件**。而那些**没有预定义字符描述的性能事件**，也可以通过特殊方式使用。
 
