--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/4. perf record.md
+++ b/Linux/Debug/debug/tools/perf/4. perf record.md
@@ -66,5 +66,5 @@ perf record [-e <EVENT> | --event=EVENT] [-l] [-a] -- <command> [<options>]
 记录执行**ls**时的**系统调用**，可以知道**哪些系统调用最频繁**：
 
 ```
-# perf record -e syscalls:sys_enter ls
+# perf record -e 'syscalls:sys_enter_*' ls
 ```
