--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/2. perf top.md
+++ b/Linux/Debug/debug/tools/perf/2. perf top.md
@@ -28,6 +28,8 @@
   - [动态创建的进程的性能采集](#动态创建的进程的性能采集)
   - [指定符号名](#指定符号名)
   - [](#)
+  - [指定](#指定)
+  - [显示函数的调用图谱](#显示函数的调用图谱)
 
 <!-- /code_chunk_output -->
 
@@ -249,6 +251,8 @@ perf top --stdio -D
 
 * `'-v'` or `'--verbose'`：显示冗余信息，如符号地址、符号类型（全局、局部、用户、内核等）。
 
+## 指定
+
 * `'-s'` or `'--sort' <key[,key2]...>`：指定界面显示的信息，以及这些信息的排序。
 
 Perf提供的备选信息有：
@@ -292,6 +296,8 @@ perf top --show-total-period
 ![2020-07-20-10-10-41.png](./images/2020-07-20-10-10-41.png)
 
 图上的第二列即为该行符号在本轮分析中对应的事件总数。
+
+## 显示函数的调用图谱
 
 * `'-g'` or `'--call-graph <record_mode[,record_size],print_type,threshold[,print_limit],order,sort_key[,branch]>'`: 在界面上显示函数的**调用图谱**。用户还可以指定显示类型，采样率的最小阈值，以及调用顺序。
 
