--- a/Linux/Debug/debug/tools/perf/4. perf record.md
+++ b/Linux/Debug/debug/tools/perf/4. perf record.md
@@ -9,6 +9,7 @@
   - [3.1. 常用参数](#31-常用参数)
   - [输出信息](#输出信息)
 - [例子](#例子)
+- [火焰图](#火焰图)
 
 <!-- /code_chunk_output -->
 
@@ -67,4 +68,11 @@ perf record [-e <EVENT> | --event=EVENT] [-l] [-a] -- <command> [<options>]
 
 ```
 # perf record -e 'syscalls:sys_enter_*' ls
+```
+
+# 火焰图
+
+```
+git clone https://github.com/cobblau/FlameGraph
+
 ```
