--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -284,7 +284,7 @@ perf timechart生成output.svg文档；
 perf定义的性能事件分为3类，分别是硬件性能事件、软件性能事件与Tracepoint Events。也可以以这三种事件为调优方向：
 
 - Hardware Event由**PMU部件产生**，在特定的条件下探测性能事件是否发生以及发生的次数。比如cache命中。
-- Software Event是**内核产生的事件**，分布在各个功能模块中，统计和操作系统相关性能事件。比如进程切换，tick数等。
+- Software Event是**内核产生的事件**，分布在各个功能模块中，统计和**操作系统相关性能事件**。比如进程切换，tick数等。
 - Tracepoint Event是内核中**静态tracepoint所触发的事件**，这些tracepoint用来判断程序运行期间内核的行为细节（这些tracepint的对应的sysfs节点在`/sys/kernel/debug/tracing/events`目录下）。比如slab分配器的分配次数等。
 
 ## 5.2. perf list查看所有性能事件
