--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -21,14 +21,18 @@
   - [4.4. perf record](#44-perf-record)
   - [4.5. 可视化工具perf timechart](#45-可视化工具perf-timechart)
 - [5. Perf性能事件](#5-perf性能事件)
-  - [5.1. 三种类型性能事件](#51-三种类型性能事件)
-  - [5.2. perf list查看所有性能事件](#52-perf-list查看所有性能事件)
-  - [5.3. 性能事件指定错误](#53-性能事件指定错误)
+  - [5.1. 三种工作模式](#51-三种工作模式)
+  - [5.2. 基于事件的采样](#52-基于事件的采样)
+  - [5.3. 三种类型性能事件](#53-三种类型性能事件)
+    - [5.3.1. 动态追踪](#531-动态追踪)
+    - [5.3.2. 事件限定符](#532-事件限定符)
   - [5.4. 性能事件的属性](#54-性能事件的属性)
     - [5.4.1. PMI中断和PEBS中断](#541-pmi中断和pebs中断)
     - [5.4.2. 性能事件的精度级别](#542-性能事件的精度级别)
     - [5.4.3. 其他属性](#543-其他属性)
   - [5.5. 没有预定义字符描述的性能事件](#55-没有预定义字符描述的性能事件)
+  - [5.6. perf list查看所有性能事件](#56-perf-list查看所有性能事件)
+  - [5.7. 性能事件指定错误](#57-性能事件指定错误)
 
 <!-- /code_chunk_output -->
 
@@ -46,6 +50,12 @@
 而在**性能剖析阶段**，则需要借助于现有的**profiling工具**，如 perf，VTune，Oprofile 等。
 
 其中 perf 相比 较于其它工具而言，具有特殊的优势。它不仅开源，而且内置于内核源码树。在 如今 upstream kernel 的开发中，perf 是发展较快的领域之一。
+
+perf_events是内核2.6+的一部分，用户空间工具perf在包`linux-tools-common`中，需要安装才能使用。
+
+- 要想从剖析中获得更多内核相关信息，你需要`符号（Symbol）`和`栈追踪`，这可能需要安装额外的包，甚至使用**特定选项重新编译**你的内核。
+
+- 剖析**用户空间代码**时，也要求目标应用程序的**调试信息（符号表**）被保留。
 
 # 2. Perf 编译安装
 
@@ -159,7 +169,7 @@ perf top -p $pid
 
 ## 3.2. 基本原理
 
-那么Perf是怎么做到的呢？
+那么Perf是怎么做到的呢？以`cycles`性能事件为例
 
 首先，perf会通过系统调用`sys_perf_event_open`在内核中注册一个检测"**cycles**"**事件**的性能计数器。内核根据perf提供的信息在**PMU**上初始化一个**硬件性能计数器**（PMC：Performance Monitoring Counter）。PMC随着CPU周期的增加而自动累加。
 
@@ -275,7 +285,25 @@ perf timechart生成output.svg文档；
 
 完整的性能事件列表见Intel手册`Performance Monitoring Events`
 
-## 5.1. 三种类型性能事件
+## 5.1. 三种工作模式
+
+有三种工作模式：
+
+* counting，在**内核上下文**对各种指标进行计数
+* sampling，对事件进行采样，并将性能数据存放到**内核缓冲**，然后异步的写入到perf.data
+* bpf，4.4版本内核引入的新特性，允许在内核中执行一段用户自定义的代码，以执行高效的过滤、汇总
+
+## 5.2. 基于事件的采样
+
+perf_events的采样是基于事件进行的。**采样的周期**以**事件的数量来表示**，而**非基于时间**。当**目标事件计数溢出指定的数值**，则产生一个采样。
+
+样本中包含的信息取决于用户和工具指定的度量类型，但是最重要的信息是指令指针（instruction pointer），也就是程序被中断时所处的位置。
+
+这种基于中断的采样，在现代处理器上存在刹车效应。也就是说，样本中记录的指针，和程序被中断以处理PMU事件时的指令指针，可能相隔数十个指令。
+
+record子命令默认使用cycle事件，类似于定期采样。
+
+## 5.3. 三种类型性能事件
 
 利用perf剖析程序性能时，需要指定**当前测试**的**性能事件**。性能事件是指在**处理器**或**操作系统**中发生的，可能影响到程序性能的硬件事件或软件事件。比如Cache丢失，流水线停顿，页面交换等。这些事件会对程序的执行时间造成较大的负面影响。在优化代码时，应尽可能减少此类事件发生。
 
@@ -289,54 +317,25 @@ perf定义的性能事件分为3类，分别是硬件性能事件、软件性能
 
 - Software Event是**内核产生的事件**，分布在各个功能模块中，统计和**操作系统相关性能事件**。比如进程切换，tick数等。
 
+基于**内核计数器**的低级事件，例如CPU迁移、上下文切换、Minor Faults、Major Faults（页面错误）
 
 - Tracepoint Event是内核中**静态tracepoint所触发的事件**，这些tracepoint用来判断程序运行期间内核的行为细节（这些tracepint的对应的sysfs节点在`/sys/kernel/debug/tracing/events`目录下）。比如slab分配器的分配次数等。
 
-## 5.2. perf list查看所有性能事件
+由内核中的ftrace实现，包括：
+1. 内核**追踪点事件**，静态的、内核级的追踪点，**硬编码**到内核
+2. 用户**静态定义追踪**（USDT），**用户态应用程序硬编码**的追踪点
+3. 动态追踪，软件可以被动态instrumented，在任何位置创建事件。对于**内核软件**，使用**kprobes框架**，对于**用户软件**，使用**uprobes**
+4. 定时追踪，以任意频率抓取快照，主要用于CPU剖析，工作机制是定期引发中断
 
-不同型号的 CPU 支持的硬件性能事件不尽相同。不同版本的内核提供的软件 性能事件与 Tracepoint events 也不尽相同。因此，perf提供了list工具以查看当前软硬件平台支持的性能事件列表。
+### 5.3.1. 动态追踪
 
-使用方法如下：
+要启用内核动态追踪，需要使用内核编译参数`CONFIG_KPROBES=y`、`CONFIG_KPROBE_EVENTS=y`。要追踪基于帧指针的内核栈，需要内核编译参数`CONFIG_FRAME_POINTER=y`。
 
-```
-# ./perf list -h
+要启用**用户动态追踪**，需要使用内核编译参数`CONFIG_UPROBES=y`、`CONFIG_UPROBE_EVENTS=y`
 
- Usage: perf list [<options>] [hw|sw|cache|tracepoint|pmu|sdt|event_glob]
+### 5.3.2. 事件限定符
 
-    -d, --desc            Print extra event descriptions. --no-desc to not print.
-    -v, --long-desc       Print longer event descriptions.
-        --debug           Enable debugging output
-        --deprecated      Print deprecated events.
-        --details         Print information on the perf event names and expressions used internally by events.
-```
-
-执行命令后，perf将给出当前软硬件平台的所有性能事件。输出结果如下图所示。每行后面括弧里的信息表示该事件是**硬件事件**、**软件事件**还是Tracepoint events。
-
-![2020-07-19-21-04-27.png](./images/2020-07-19-21-04-27.png)
-
-......
-
-![2020-07-19-21-06-38.png](./images/2020-07-19-21-06-38.png)
-
-## 5.3. 性能事件指定错误
-
-所以如果指定性能事件失败, 可能会有类似打印
-
-```
-./perf record -e syscalls:sys_enter ls
-event syntax error: 'syscalls:sys_enter'
-                     \___ unknown tracepoint
-
-Error:	File /sys/kernel/debug/tracing/events/syscalls/sys_enter not found.
-Hint:	Perhaps this kernel misses some CONFIG_ setting to enable this feature?.
-
-Run 'perf list' for a list of valid events
-
- Usage: perf record [<options>] [<command>]
-    or: perf record [<options>] -- <command> [<options>]
-
-    -e, --event <event>   event selector. use 'perf list' to list available events
-```
+事件有多种表示方式，最简单的是它的字符串表示。引用事件时，可以指定限定符：
 
 ## 5.4. 性能事件的属性
 
@@ -403,3 +402,50 @@ perf stat -e r010b ls
 ```
 
 所以完整的性能事件列表见Intel手册`Performance Monitoring Events`
+
+
+## 5.6. perf list查看所有性能事件
+
+不同型号的 CPU 支持的硬件性能事件不尽相同。不同版本的内核提供的软件 性能事件与 Tracepoint events 也不尽相同。因此，perf提供了list工具以查看当前软硬件平台支持的性能事件列表。
+
+使用方法如下：
+
+```
+# ./perf list -h
+
+ Usage: perf list [<options>] [hw|sw|cache|tracepoint|pmu|sdt|event_glob]
+
+    -d, --desc            Print extra event descriptions. --no-desc to not print.
+    -v, --long-desc       Print longer event descriptions.
+        --debug           Enable debugging output
+        --deprecated      Print deprecated events.
+        --details         Print information on the perf event names and expressions used internally by events.
+```
+
+执行命令后，perf将给出当前软硬件平台的所有性能事件。输出结果如下图所示。每行后面括弧里的信息表示该事件是**硬件事件**、**软件事件**还是Tracepoint events。
+
+![2020-07-19-21-04-27.png](./images/2020-07-19-21-04-27.png)
+
+......
+
+![2020-07-19-21-06-38.png](./images/2020-07-19-21-06-38.png)
+
+## 5.7. 性能事件指定错误
+
+所以如果指定性能事件失败, 可能会有类似打印
+
+```
+./perf record -e syscalls:sys_enter ls
+event syntax error: 'syscalls:sys_enter'
+                     \___ unknown tracepoint
+
+Error:	File /sys/kernel/debug/tracing/events/syscalls/sys_enter not found.
+Hint:	Perhaps this kernel misses some CONFIG_ setting to enable this feature?.
+
+Run 'perf list' for a list of valid events
+
+ Usage: perf record [<options>] [<command>]
+    or: perf record [<options>] -- <command> [<options>]
+
+    -e, --event <event>   event selector. use 'perf list' to list available events
+```
