--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/4. perf record.md
+++ b/Linux/Debug/debug/tools/perf/4. perf record.md
@@ -32,6 +32,8 @@ perf record [-e <EVENT> | --event=EVENT] [-l] [-a] -- <command> [<options>]
 
 # 3. 参数介绍
 
+参考stat子命令。
+
 ## 3.1. 常用参数
 
 * `'-e'`: 指定性能事件, 默认是`cycles`
