--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/2. perf top.md
+++ b/Linux/Debug/debug/tools/perf/2. perf top.md
@@ -30,6 +30,7 @@
   - [](#)
   - [指定](#指定)
   - [显示函数的调用图谱](#显示函数的调用图谱)
+- [例子](#例子)
 
 <!-- /code_chunk_output -->
 
@@ -463,3 +464,17 @@ callee 与 caller。
 * `'--symbols' <symbol[,symbol...]>`：仅显示指定的符号。
 
 * `'-M'` or `'--disassembler-style'`：显示符号注解时，可以通过此参数指定汇编语言的风格。
+
+# 例子
+
+动态显示成本最高的地址和符号，不保存到文件
+
+```
+perf top -F 49
+```
+
+动态显示成本最高的命令
+
+```
+perf top -F 49 -ns comm,dso
+```
