--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/2. perf top.md
+++ b/Linux/Debug/debug/tools/perf/2. perf top.md
@@ -38,6 +38,10 @@
 
 对于一个**指定的性能事件**(默认是CPU周期)，显示**消耗最多**的**函数**或**指令**。
 
+动态显示执行成本最高的项。
+
+默认情况下以cycles事件采样，样本最高的输出在最顶部。
+
 跟踪时可以指定事件，CPU，以及是否跟踪stack trace。perf top主要用于实时分析各个函数在某个性能事件上的热度，能够快速的定位热点函数，包括应用程序函数、模块函数与内核函数，甚至能够定位到热点指令。默认的性能事件为cpu cycles。
 
 利用perf top，能够直观地观察到当前的热点函数，并利用工具中内置的annotate功能，进一步查找特点指令。
