--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -14,7 +14,7 @@
   - [3.2. 基本原理](#32-基本原理)
   - [3.3. 工作原理](#33-工作原理)
     - [3.3.1. Symbols](#331-symbols)
-- [4. Perf功能概述](#4-perf功能概述)
+- [4. Perf 功能概述](#4-perf-功能概述)
   - [4.1. 全局性概况](#41-全局性概况)
   - [4.2. 全局细节](#42-全局细节)
   - [4.3. 特定功能分析](#43-特定功能分析)
@@ -203,7 +203,7 @@ perf命令行接口并不能利用所有的Linux trace特性，有些trace需要
 
 https://developer.aliyun.com/article/65255
 
-# 4. Perf功能概述
+# 4. Perf 功能概述
 
 perf 命令用法还是挺简单的，根据功能区分了COMMAND，每个COMMAND有各自的用法。
 
