--- a/Linux/Debug/debug/tools/perf/5. perf report.md
+++ b/Linux/Debug/debug/tools/perf/5. perf report.md
@@ -7,10 +7,12 @@
 - [2. 使用方法](#2-使用方法)
 - [3. 参数介绍](#3-参数介绍)
   - [3.1. 常用参数](#31-常用参数)
+    - [内核符号](#内核符号)
   - [输出](#输出)
     - [默认输出](#默认输出)
     - [指定分组规则](#指定分组规则)
-    - [内核符号](#内核符号)
+    - [Children/Self](#childrenself)
+- [例子](#例子)
 
 <!-- /code_chunk_output -->
 
@@ -32,15 +34,15 @@ perf report [-i <file> | --input=file]
 
 ## 3.1. 常用参数
 
-* `'-i'`: 输入文件名
-* `'-v'`: 显示每个符号的地址
-* `'-d'`: 只显示指定 dso 的符号
-* `'-n’`: 显示每个符号对应的事件数
-* `'--comms=<comm>'`: 只显示指定comm的信息
-* `'-S <symbol name>'`: 只考虑指定符号 
-* `'-U'`: 只显示已解析的符号
-* `'-g [type,min[,limit],order], --call-graph'`: 按照指定的方式显示函数调用图
-
+* `-i`: 输入文件名
+* `-v`: 显示每个符号的地址
+* `-d`: 只显示指定 dso 的符号
+* `-n`: 显示每个符号对应的事件数
+* `--comms=<comm>`: 只显示指定comm的信息
+* `-S <symbol name>`: 只考虑指定符号 
+* `-U`: 只显示已解析的符号
+* `-g [type,min[,limit],order], --call-graph`: 按照指定的方式显示函数调用图
+* `-k`: 指定未压缩内核的位置
 
 <table>
     <tr>
@@ -58,6 +60,10 @@ perf report [-i <file> | --input=file]
     <tr>
         <td>-T</td>
         <td>显示每个线程的事件计数器</td>
+    </tr>
+    <tr>
+        <td>-k</td>
+        <td>指定未压缩内核的位置</td>
     </tr>
     <tr>
         <td>--pid</td>
@@ -93,6 +99,14 @@ perf report [-i <file> | --input=file]
         <td>指定输出字段，逗号分隔多个字段</td>
     </tr>
 </table>
+
+### 内核符号
+
+perf不知道如何从压缩内核（vmlinuz）中抽取符号，如果你的内核保留了调试符号，则可以用-k来指出未压缩内核的位置：
+
+```
+perf report -k /tmp/vmlinux
+```
 
 ## 输出
 
@@ -155,5 +169,21 @@ perf report --sort=cpu
 +   8.28%  7  
 ```
 
-### 内核符号
+### Children/Self
 
+如果在record时收集了调用链，则Overhead可以在Children、Self两个列中显示。Children显示子代函数的样本计数、Self显示函数自己的样本计数
+
+# 例子
+
+```
+# 报告perf.data
+perf report
+
+# 显示样本数量
+perf report -n
+
+# 树状结构显示，展开，可以追踪到高成本的执行路径
+perf report --stdio
+# 每行显示一个帧，扁平化显示，按成本降序排列
+perf report --stdio -n -g folded
+```
