--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/5. perf report.md
+++ b/Linux/Debug/debug/tools/perf/5. perf report.md
@@ -175,15 +175,25 @@ perf report --sort=cpu
 
 # 例子
 
+报告perf.data
+
 ```
-# 报告perf.data
 perf report
+```
+显示样本数量
 
-# 显示样本数量
+```
 perf report -n
+```
 
-# 树状结构显示，展开，可以追踪到高成本的执行路径
+树状结构显示，展开，可以追踪到高成本的执行路径
+
+```
 perf report --stdio
-# 每行显示一个帧，扁平化显示，按成本降序排列
+```
+
+每行显示一个帧，扁平化显示，按成本降序排列
+
+```
 perf report --stdio -n -g folded
 ```
