--- a/Linux/Debug/debug/tools/perf/2. perf top.md
+++ b/Linux/Debug/debug/tools/perf/2. perf top.md
@@ -28,7 +28,7 @@
   - [动态创建的进程的性能采集](#动态创建的进程的性能采集)
   - [指定符号名](#指定符号名)
   - [](#)
-  - [指定](#指定)
+  - [指定显示信息](#指定显示信息)
   - [显示函数的调用图谱](#显示函数的调用图谱)
 - [例子](#例子)
 
@@ -256,7 +256,7 @@ perf top --stdio -D
 
 * `'-v'` or `'--verbose'`：显示冗余信息，如符号地址、符号类型（全局、局部、用户、内核等）。
 
-## 指定
+## 指定显示信息
 
 * `'-s'` or `'--sort' <key[,key2]...>`：指定界面显示的信息，以及这些信息的排序。
 
