--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -4,6 +4,7 @@
 <!-- code_chunk_output -->
 
 - [1. 系统级性能优化](#1-系统级性能优化)
+- [Perf 简介](#perf-简介)
 - [2. Perf 编译安装](#2-perf-编译安装)
   - [2.1. 测试](#21-测试)
   - [2.2. 编译](#22-编译)
@@ -48,6 +49,8 @@
 在代码优化阶段往往需要凭借开发者的经验，编写简洁高效的代码，甚至在汇编 语言级别合理使用各种指令，合理安排各种指令的执行顺序。
 
 而在**性能剖析阶段**，则需要借助于现有的**profiling工具**，如 perf，VTune，Oprofile 等。
+
+# Perf 简介
 
 其中 perf 相比 较于其它工具而言，具有特殊的优势。它不仅开源，而且内置于内核源码树。在 如今 upstream kernel 的开发中，perf 是发展较快的领域之一。
 
