--- Auto-Git Commit ---

--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -52,6 +52,16 @@
 
 # Perf 简介
 
+Linux内核实现了非常有价值的性能分析基础设施（perf infrastructure），可以用于剖析各种CPU或软件事件。这一功能由perf_events接口暴露，并提供 perf这一用户空间工具，通过此工具，你可以发现以下问题的答案：
+
+* 为什么内核使用**太多的CPU**，**哪些代码**使用了这些CPU时间
+* **什么代码**导致**CPU二级缓存不命中**
+* CPU是否因**内存、IO**而卡顿
+* 什么代码在**分配内存**，分配了**多少**
+* 什么触发了**TCP重传**
+* 某个内核函数是否**被频繁调用**
+* 线程离开CPU的原因 
+
 其中 perf 相比 较于其它工具而言，具有特殊的优势。它不仅开源，而且内置于内核源码树。在 如今 upstream kernel 的开发中，perf 是发展较快的领域之一。
 
 perf_events是内核2.6+的一部分，用户空间工具perf在包`linux-tools-common`中，需要安装才能使用。
