--- a/Linux/Debug/debug/tools/perf/1. perf 简介.md
+++ b/Linux/Debug/debug/tools/perf/1. perf 简介.md
@@ -5,6 +5,7 @@
 
 - [1. 系统级性能优化](#1-系统级性能优化)
 - [Perf 简介](#perf-简介)
+  - [](#)
 - [2. Perf 编译安装](#2-perf-编译安装)
   - [2.1. 测试](#21-测试)
   - [2.2. 编译](#22-编译)
@@ -52,7 +53,7 @@
 
 # Perf 简介
 
-Linux内核实现了非常有价值的性能分析基础设施（perf infrastructure），可以用于剖析各种CPU或软件事件。这一功能由perf_events接口暴露，并提供 perf这一用户空间工具，通过此工具，你可以发现以下问题的答案：
+Linux内核实现了非常有价值的性能分析基础设施（perf infrastructure），可以用于剖析各种CPU或软件事件。这一功能由`perf_events`**接口**暴露，并提供 **perf** 这一**用户空间工具**，通过此工具，你可以发现以下问题的答案：
 
 * 为什么内核使用**太多的CPU**，**哪些代码**使用了这些CPU时间
 * **什么代码**导致**CPU二级缓存不命中**
@@ -60,15 +61,25 @@ Linux内核实现了非常有价值的性能分析基础设施（perf infrastruc
 * 什么代码在**分配内存**，分配了**多少**
 * 什么触发了**TCP重传**
 * 某个内核函数是否**被频繁调用**
-* 线程离开CPU的原因 
+* 线程**离开CPU的原因** 
+
+
+perf是一款Linux性能分析工具。Linux性能计数器是一个新的基于内核的子系统，它提供一个性能分析框架，比如硬件（CPU、PMU(Performance Monitoring Unit)）功能和软件(软件计数器、tracepoint)功能。通过perf，应用程序可以利用PMU、tracepoint和内核中的计数器来进行性能统计。它不但可以分析制定应用程序的性能问题（per thread），也可以用来分析内核的性能问题。
+
+总之perf是一款很牛逼的综合性分析工具，大到系统全局性性能，再小到进程线程级别，甚至到函数及汇编级别。
+
+相关文档: https://elixir.bootlin.com/linux/latest/source/tools/perf/Documentation
+
+Perf是内置于Linux源代码树中的性能剖析(profiling)工具。它基于**事件采样**原理，以**性能事件**为基础，支持针对处理器相关性能指标与操作系统相关性能指标的性能剖析。可用于性能瓶颈的查找与热点代码的定位。
 
 其中 perf 相比 较于其它工具而言，具有特殊的优势。它不仅开源，而且内置于内核源码树。在 如今 upstream kernel 的开发中，perf 是发展较快的领域之一。
 
 perf_events是内核2.6+的一部分，用户空间工具perf在包`linux-tools-common`中，需要安装才能使用。
 
 - 要想从剖析中获得更多内核相关信息，你需要`符号（Symbol）`和`栈追踪`，这可能需要安装额外的包，甚至使用**特定选项重新编译**你的内核。
-
 - 剖析**用户空间代码**时，也要求目标应用程序的**调试信息（符号表**）被保留。
+
+## 
 
 # 2. Perf 编译安装
 
@@ -105,13 +116,6 @@ man 1 perf-list
 
 # 3. Perf简介
 
-perf是一款Linux性能分析工具。Linux性能计数器是一个新的基于内核的子系统，它提供一个性能分析框架，比如硬件（CPU、PMU(Performance Monitoring Unit)）功能和软件(软件计数器、tracepoint)功能。通过perf，应用程序可以利用PMU、tracepoint和内核中的计数器来进行性能统计。它不但可以分析制定应用程序的性能问题（per thread），也可以用来分析内核的性能问题。
-
-总之perf是一款很牛逼的综合性分析工具，大到系统全局性性能，再小到进程线程级别，甚至到函数及汇编级别。
-
-相关文档: https://elixir.bootlin.com/linux/latest/source/tools/perf/Documentation
-
-Perf是内置于Linux源代码树中的性能剖析(profiling)工具。它基于**事件采样**原理，以**性能事件**为基础，支持针对处理器相关性能指标与操作系统相关性能指标的性能剖析。可用于性能瓶颈的查找与热点代码的定位。
 
 ## 3.1. 简单例子
 
